# thakii-pdf-engine

./: DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  README.md  TRANSFER_NOTES.md  deploy.sh  installer.sh  pyproject.toml  requirements copy.txt  requirements.txt  setup.py
.github/workflows/: deploy-to-thakii-02.yml  test-deployment.yml
src/: health_server.py
thakii_pdf_engine/: video_segment_finder.py
