[tool.poetry]
name = "poetry add webvtt-py"
version = "0.1.0"
description = ""
authors = ["Ouday Khaled <ouday.khaled@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
webvtt-py = "^0.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
